// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-cJSrbW cEMchq"
>
  No Content
</div>
`;

exports[`renders correctly with a header 1`] = `
<div
  className="sc-cJSrbW cEMchq"
>
  <header
    className="sc-ksYbfQ kjoMeg"
  >
    This is a header
  </header>
</div>
`;

exports[`renders correctly with a header and content 1`] = `
<div
  className="sc-cJSrbW cEMchq"
>
  <header
    className="sc-ksYbfQ kjoMeg"
  >
    This is a header
  </header>
  <section
    className="sc-hmzhuo izgkUQ"
  >
    This is the panels content
  </section>
</div>
`;
